--- a/slides/basicsyntax/basicsyntax.html
+++ b/slides/basicsyntax/basicsyntax.html
@@ -21,6 +21,7 @@
         link.href = window.location.search.match(/print-pdf/gi) ? '../../css/print/pdf.css' : '../../css/print/paper.css';
         document.getElementsByTagName('head')[0].appendChild(link);
     </script>
+    <script src="../../js/initialize.js"></script>
 </head>
 <body>
 <div class="reveal">
@@ -28,15 +29,15 @@
         <section class="deck-slide">
             <h1>Basic syntax</h1>
         </section>
-        <section data-external="field_property.html" class="deck-slide"></section> <!--  Bonus 1, 2 -->
-        <section data-external="class.html" class="deck-slide"></section> <!--  Task 1, 2, 3  -->
-        <section data-external="object.html" class="deck-slide"></section>
-        <section data-external="nullability.html" class="deck-slide"></section>
-        <section data-external="function.html" class="deck-slide"></section>
-        <section data-external="collection.html" class="deck-slide"></section>
-        <section data-external="coercion.html" class="deck-slide"></section>
-        <section data-external="delegation.html" class="deck-slide"></section> <!--  Task 4  -->
-        <section data-external="destructuring.html" class="deck-slide"></section>
+        <section data-external="field_property.html" class="deck-slide"></section> <!-- Céline -->
+        <section data-external="class.html" class="deck-slide"></section> <!-- Abi --> <!--  Task 1, 2, 3  -->
+        <section data-external="object.html" class="deck-slide"></section> <!-- Abi -->
+        <section data-external="nullability.html" class="deck-slide"></section> <!-- Abi -->
+        <section data-external="function.html" class="deck-slide"></section> <!-- Céline -->
+        <section data-external="collection.html" class="deck-slide"></section> <!-- Abi -->
+        <section data-external="coercion.html" class="deck-slide"></section> <!-- Abi -->
+        <section data-external="delegation.html" class="deck-slide"></section> <!-- Abi --> <!--  Task 4  -->
+        <section data-external="destructuring.html" class="deck-slide"></section> <!-- Abi -->
     </div>
 </div>
 
