--- a/slides/basicsyntax/topic/field_property.html
+++ b/slides/basicsyntax/topic/field_property.html
@@ -1,9 +1,12 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <section class="white"><h3>Fields and Properties</h3></section>
 <section class="white">
     <h2>Understanding Fields and Properties</h2>
     <ul>
-        <li>Kotlin properties provide a convenient way to define mutable (var) or immutable (val) variables with implicit accessors.</li>
-        <li>Kotlin properties are backed by a field, referred to as <code>field</code>, which can be accessed inside custom getters and setters.</li>
+        <li>Kotlin's properties provide a convenient way to define mutable (var) or immutable (val) variables with implicit accessors.</li>
+        <li>Kotlin's properties are backed by a field, referred to as <code>field</code>, which can be accessed inside custom getters and setters.</li>
         <li>Private setters can control the mutability of a property externally.</li>
     </ul>
 </section>
