--- a/slides/basicsyntax/topic/nullability.html
+++ b/slides/basicsyntax/topic/nullability.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <section class="white">
     <h3>Nullability</h3>
     <p><strong>Nullability</strong> refers to whether a variable can hold a null value.</p>
