--- a/slides/endtoend/topic/jpa.html
+++ b/slides/endtoend/topic/jpa.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <section class="white">
     <h3>Kotlin with JPA</h3>
     <p>Why not to use kotlin data class with JPA</p>
