--- a/slides/endtoend/topic/springbootexercises.html
+++ b/slides/endtoend/topic/springbootexercises.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <section class="white">
     <h3>Spring Boot initialising</h3>
     <p>How to initialize a Kotlin Spring Boot app</p>
