--- a/slides/introduction/topic/benefitsofusingkotlin.html
+++ b/slides/introduction/topic/benefitsofusingkotlin.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <h2>Benefits of using Kotlin</h2>
 <ul>
     <li>Pragmatic</li>
