--- a/slides/introduction/topic/coursestructure.html
+++ b/slides/introduction/topic/coursestructure.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <h2>Course structure</h2>
 <h5>General</h5>
 <ul>
