--- a/slides/introduction/topic/gettingtoknow.html
+++ b/slides/introduction/topic/gettingtoknow.html
@@ -1,6 +1,9 @@
-    <h2>Getting to Know Each Other</h2>
-    <ul>
-        <li>Introduce your self</li>
-        <li>Which technology are you using? </br><i>(Language, Framework, ...)</i></li>
-        <li>Why are you attending this workshop? </br><i>(expectation, goals, ...)</i></li>
-    </ul>
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
+<h2>Getting to Know Each Other</h2>
+<ul>
+    <li>Introduce your self</li>
+    <li>Which technology are you using? </br><i>(Language, Framework, ...)</i></li>
+    <li>Why are you attending this workshop? </br><i>(expectation, goals, ...)</i></li>
+</ul>
