--- a/slides/basicsyntax/topic/class.html
+++ b/slides/basicsyntax/topic/class.html
@@ -1,3 +1,4 @@
+<!--suppress HtmlUnknownTarget -->
 <script src="../../js/initialize.js"></script>
 
 <section class="white"><h3>Class</h3></section>
@@ -295,7 +296,7 @@ class Derived : Base {
 <section class="white">
     <h3>Task 3</h3>
     <h4>Linking Users with Orders</h4>
-    <h4>Create an OrderManager manages orders per User</h4>
+    <h4>Create an OrderManager which manages orders per User</h4>
     <ul>
         <li>addOrder</li>
         <li>describeOrders (which executes <code>describeOrderState</code> if a user exists</li>
