--- a/slides/basicsyntax/topic/coercion.html
+++ b/slides/basicsyntax/topic/coercion.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <!-- Operators & Coercion -->
 <section class="white">
     <h2>Operators &amp; Coercion</h2>
