--- a/slides/basicsyntax/topic/collection.html
+++ b/slides/basicsyntax/topic/collection.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <section class="white">
     <h3>Collections</h3>
 </section>
