--- a/slides/basicsyntax/topic/object.html
+++ b/slides/basicsyntax/topic/object.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <section class="white"><h3>Object</h3></section>
 <!------------------------------------------------------>
 <!------------------------------------------------------>
