--- a/slides/endtoend/topic/lambdafordsl.html
+++ b/slides/endtoend/topic/lambdafordsl.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <section class="white">
     <h3>Call function with lambda argument</h3>
     <p>If the last argument of a function is a lambda, when the function is called,
