--- a/slides/endtoend/topic/testlibraries.html
+++ b/slides/endtoend/topic/testlibraries.html
@@ -1,3 +1,6 @@
+<!--suppress HtmlUnknownTarget -->
+<script src="../../js/initialize.js"></script>
+
 <section class="white">
     <h3>Testing and Code Checks</h3>
     <p>Here a list of commonly used kotlin libraries helpful for testing.</p>
